# Kemy-training

./: README.md
protobufs/: dna.proto
src/: Makefile.am  aimd-templates.cc  aimd.cc  aimd.hh  configrange.cc  configrange.hh  evaluator.cc  kemy.cc  link-templates.cc  link.hh  memory.cc  memory.hh  memoryrange.cc  memoryrange.hh  network.cc  network.hh  rat-runner.cc  ratbreeder.cc  scoring-example.cc  sendergang.cc  whisker.cc  whisker.hh  whiskertree.cc  whiskertree.hh
